# Explorer

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  build.sh  frida-core-example.c  install_dep.py  install_dep.sh
agents/: FunctionTracer.ts  SslDumper.ts  Utils.ts  package-lock.json  package.json
agents/aosp-examples/AudioTrack/: getTimeStamp.js
agents/aosp-examples/BufferQueue/: update.js
agents/aosp-examples/MediaCodec/: configure.js  jni.js  releaseOutputBuffer.js
cmake/: Dependencies.cmake  EmbedJs.cmake  LocalFridaFinder.cmake  frida_pkg_finder.sh  generate_js_header.py  version.h.in
docs/: API_REFERENCE.md  API_SPECIFICATION.md  BACKWARD_COMPATIBILITY.md  DAEMON_MODE.md  DAEMON_OPERATION.md  DEVICE_ENHANCEMENTS.md  SESSION_HANDLERS.md
example/: legacy_config.json
examples/: config.json
mcp-server/: adb_helper.py  explorer_client.py  inspect.sh  pyproject.toml  schema_cache.py  server.py
skills/explorer/: SKILL.md
src/: Application.cpp  Application.h  ApplicationDaemon.cpp  ApplicationDaemon.h  Argument.cpp  Argument.h  CMakeLists.txt  TaskConfig.cpp  TaskConfig.h  main.cpp
src/frida/: CMakeLists.txt  Device.cpp  Device.h  FridaHelper.h  Script.cpp  Script.h  Session.cpp  Session.h  java_runtime.js
src/http/: ApiRouter.cpp  ApiRouter.h  ApiSchema.cpp  ApiSchema.h  AsyncRequestHandler.cpp  AsyncRequestHandler.h  CMakeLists.txt  EnhancedRequestHandler.cpp  EnhancedRequestHandler.h  HttpServer.cpp  HttpServer.h  RequestHandler.cpp  RequestHandler.h
src/http/handlers/: CMakeLists.txt  DrainMessagesHandler.cpp  DrainMessagesHandler.h  HealthHandler.cpp  HealthHandler.h  ListSessionsHandler.cpp  ListSessionsHandler.h  LoadScriptHandler.cpp  LoadScriptHandler.h  MetricsHandler.cpp  MetricsHandler.h  SessionDispatcherHandler.cpp  SessionDispatcherHandler.h  StartSessionHandler.cpp  StartSessionHandler.h  StatsHandler.cpp  StatsHandler.h  StatusHandler.cpp  StatusHandler.h  StopSessionHandler.cpp  StopSessionHandler.h  UnloadScriptHandler.cpp  UnloadScriptHandler.h
src/plugins/: CMakeLists.txt  Plugin.cpp  Plugin.h
src/plugins/function_tracer/: CMakeLists.txt  FunctionTracer.cpp  FunctionTracer.h  FunctionTracer.js  ScriptBuilder.cpp  ScriptBuilder.h
src/plugins/functoin_tracer/: FunctionTracer.js
src/plugins/ssl_dumper/: CMakeLists.txt  SslDumper.cpp  SslDumper.h  SslDumper.js
src/utils/: CMakeLists.txt  DB.cpp  DB.h  ErrorHandling.cpp  ErrorHandling.h  Fmt.h  HttpDownloader.cpp  HttpDownloader.h  Log.cpp  Log.h  Macros.h  MessageCache.h  Result.h  SmallMap.h  StateManager.cpp  StateManager.h  Status.cpp  Status.h  Subprocess.cpp  Subprocess.h  System.cpp  System.h  Util.cpp  Util.h
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  DaemonIntegrationTest.cpp  DaemonIntegrationTest.h  integration_test_main.cpp
tests/simple_tests/: CMakeLists.txt  DBTests.cpp  HttpTests.cpp  SubprocessTests.cpp
tools/: CMakeLists.txt  ShootingTarget.c  config-schema.json  debug.js  debug_printf.js  deploy.sh
tools/config_templates/: native_tracing.json  netflix_tracing.json  ssl_capture.json
